--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 //include ':OpenEdXMobile', ':android-iconify', ':android-iconify-fontawesome', ':buildSrc'
-include ':OpenEdXMobile', ':android-iconify', ':android-iconify-fontawesome'
+include ':BNMIT', ':android-iconify', ':android-iconify-fontawesome'
 //include("buildsource")
