--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -335,7 +335,8 @@
 
         <!-- Setup Firebase -->
         <meta-data android:name="firebase_analytics_collection_enabled"
-            android:value="${firebaseEnabled}" />
+            android:value="true" />
+            <!--    android:value="${firebaseEnabled}" /> -->
 
         <!-- Branch -->
         <meta-data android:name="io.branch.sdk.BranchKey" android:value="${branchKey}" />
