--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -335,7 +335,7 @@
 
         <!-- Setup Firebase -->
         <meta-data android:name="firebase_analytics_collection_enabled"
-            android:value="true" />
+            android:value="false" />
             <!--    android:value="${firebaseEnabled}" /> -->
 
         <!-- Branch -->
