--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -380,7 +380,7 @@
             android:resource="@color/edx_brand_primary_accent" />
         <meta-data
             android:name="firebase_performance_logcat_enabled"
-            android:value="true" />
+            android:value="false" />
 
         <!--Google cast options provider -->
         <meta-data
