--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ crashlytics-build.properties
 com_crashlytics_export_strings.xml
 
 # Google Firebase
-*google-services.json
+# *google-services.json
 
 # Other files and directories to be ignored
 OpenEdXMobile/default_config/local.yaml
