--- a/OpenEdXMobile/default_config/config.yaml
+++ b/OpenEdXMobile/default_config/config.yaml
@@ -1,7 +1,7 @@
-API_HOST_URL: 'https://tutor2.vrook.co' # localhost is 10.0.2.2 in Android
+API_HOST_URL: 'https://test.vrook.co' # localhost is 10.0.2.2 in Android
 ENVIRONMENT_DISPLAY_NAME: 'Vrook'
-PLATFORM_NAME: 'BNMIT E-Learning'
-PLATFORM_DESTINATION_NAME: 'tutor2.vrook.co'
+PLATFORM_NAME: 'Vrook E-Learning'
+PLATFORM_DESTINATION_NAME: 'test.vrook.co'
 FEEDBACK_EMAIL_ADDRESS: 'info@vrook.co'
 TAB_LAYOUTS_ENABLED: 'true'
 DISCUSSIONS_ENABLED: 'true'
