--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -209,7 +209,7 @@ dependencies {
     // Firebase Crashlytics SDK
     implementation ('com.google.firebase:firebase-crashlytics:17.0.0'){
         exclude group: 'javax.inject'
-        transitive = true
+        transitive = false 
     }
 
     // Recommended: Add the Google Analytics SDK along Firebase Crashlytics SDK
