--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -362,7 +362,7 @@
         <!-- Notifications through Firebase Cloud Messaging (FCM) -->
         <meta-data android:name="firebase_messaging_auto_init_enabled"
             android:value="false" />
-            <!-- android:value="${fcmEnabled}" />  ->
+            <!-- android:value="${fcmEnabled}" />  -->
         <service
             android:name="org.edx.mobile.notifications.services.NotificationService"
             android:enabled="${fcmEnabled}">
